# PedidosRust

./: .gitignore  Cargo.toml  Consigna.md  README.md  run_all_tests.sh  test_3_2_5_5.sh
client/: Cargo.toml
client/src/: client.rs  lib.rs  main.rs
client/src/client_actors/: client.rs  mod.rs  ui_handler.rs
client/src/messages/: internal_messages.rs  messages.rs
clients/: Cargo.toml
clients/src/: client.rs  main.rs
common/: Cargo.toml
common/src/: bimap.rs  constants.rs  lib.rs  logger.rs  utils.rs
common/src/messages/: client_messages.rs  coordinator_messages.rs  coordinatormanager_messages.rs  delivery_messages.rs  internal_messages.rs  mod.rs  payment_messages.rs  restaurant_messages.rs  shared_messages.rs  socket_messages.rs
common/src/network/: communicator.rs  connections.rs  mod.rs  peer_types.rs  socket_reader.rs  socket_writer.rs  tcp_receiver.rs  tcp_sender.rs
common/src/types/: delivery_status.rs  dtos.rs  mod.rs  order_status.rs  payment_status.rs  restaurant_info.rs
delivery/: Cargo.toml
delivery/src/: delivery.rs  lib.rs  main.rs
payment/: Cargo.toml
restaurant/: Cargo.toml
scripts/: close_all_terminals.sh  test_3_1_5_5.sh  test_3_2_5_5.sh
scripts_for_testing/: test_1_1_1_2.sh  test_3_5_7_7.sh  test_disconnect_and_reconnect_client_while_delivering.sh  test_disconnect_and_reconnect_delivery_while_delivering.sh  test_disconnect_and_reconnect_restaurant_while_preparing_order.sh  test_kill_delivery_while_delivering.sh  test_kill_leader_3_2_5_5.sh  test_kill_two_leaders_coordinators_3_2_5_5.sh
server/: Cargo.toml
src/: main.rs
(+45 files in other folders)
