[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
actix = "0.13.5"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"
futures-channel = "0.3"
ntest = "0.9"
console-subscriber = "0.2"
actix_async_handler = "0.1.0"